5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1671_1100.log
== TEST (2019-04-19 01:04:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = str(input("cedula: (2/5/10/20/50/100)"))

if x != 2, 5, 10, 20, 50, 100:
	

-- ERROR:
File "XXXX", line 6
    if x != 2, 5, 10, 20, 50, 100:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:07:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = str(input("cedula: (2/5/10/20/50/100)"))

print(x)
if x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x! = 100:
	animal = "invalido"
-- ERROR:
File "XXXX", line 7
    if x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x! = 100:
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:08:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = str(input("cedula: (2/5/10/20/50/100)"))

print(x)

if x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100:
	animal = "invalido"
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:13:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100:
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
else:
	animal = "Garoupa"

print(animal)
-- OUTPUT:
100
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:13:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100:
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
else:
	animal = "Garoupa"

print(animal)
-- OUTPUT:
100
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:13:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100:
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
else:
	animal = "Garoupa"

print(animal)
-- OUTPUT:
100
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:15:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100:
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
else:
	animal = "Garoupa"

print(animal)
-- OUTPUT:
100
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:15:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if not(x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100):
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
else:
	animal = "Garoupa"

print(animal)
-- OUTPUT:
100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:15:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if not(x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100):
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
else:
	animal = "Garoupa"

print(animal)
-- OUTPUT:
100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:15:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if not(x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100):
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
else:
	animal = "Garoupa"

print(animal)
-- EXECUTION TIME:
0.1288
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:16:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if not(x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100):
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif:
	animal = "Garoupa"

print(animal)
-- EXECUTION TIME:
0.179926
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 20
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:16:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100:
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif:
	animal = "Garoupa"

print(animal)
-- EXECUTION TIME:
0.16531
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 20
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:21:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

elif x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100:
	animal = "invalido"
elif x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif:
	animal = "Garoupa"

print(animal)
-- ERROR:
File "XXXX", line 8
    elif x != 2 or x != 5 or x != 10 or x != 20 or x != 50 or x != 100:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:22:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif:
	animal = "Garoupa"
else:
	animal = "Invalido"

print("Animal:", animal)
-- ERROR:
File "XXXX", line 18
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:22:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif x == 100:
	animal = "Garoupa"
else:
	animal = "Invalido"

print("Animal:", animal)
-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:23:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif x == 100:
	animal = "Garoupa"
else:
	animal = "Invalido"

print("Animal:", animal)
-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:23:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print(x)

if x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif x == 100:
	animal = "Garoupa"
else:
	animal = "Invalido"

print("Animal:", animal)
-- EXECUTION TIME:
0.119954
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 01:23:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print("Entrada:", x)

if x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif x == 100:
	animal = "Garoupa"
else:
	animal = "Invalido"

print("Animal:", animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:23:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("cedula: (2/5/10/20/50/100): "))

print("Entrada:", x)

if x == 2:
	animal = "Tartaruga"
elif x == 5:
	animal = "Garça"
elif x == 10:
	animal = "Arara"
elif x == 20:
	animal = "Mico-leao-dourado"
elif x == 50:
	animal = "Onca-pintada"
elif x == 100:
	animal = "Garoupa"
else:
	animal = "Invalido"

print("Animal:", animal)
-- EXECUTION TIME:
0.155949
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
